# RP2040_Universal_SFP_Transceiver

./: README.md
.github/workflows/: main.yml  pico-sdk-build.yml  version.yml
Firmware/RP2040_Universal_SFP_Transceiver/: .gitignore  CMakeLists.txt  RP2040_Universal_SFP_Transceiver.ino  pio_h_generator_windows.bat
Firmware/RP2040_Universal_SFP_Transceiver/src/: main.cpp  version.h
Firmware/RP2040_Universal_SFP_Transceiver/src/board/: board.cpp  board.h  pin.h
Firmware/RP2040_Universal_SFP_Transceiver/src/sfp/: sfp.h  sfp_8b10b_table.h  sfp_receiver.cpp  sfp_receiver.h  sfp_receiver.pio  sfp_transmitter.cpp  sfp_transmitter.h  sfp_transmitter.pio
